--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <img src="images/ibm.jpg" alt="Certification 2"
       style="width: 120px; height: 120px; object-fit: cover; box-shadow: 0 0 8px rgba(0,0,0,0.2);" />
   </a>
+	 <a href="https://drive.google.com/file/d/1uAfsJ-AllAbxzjF9neSF99-4Hr5Q5gWw/view?usp=sharing" target="_blank">
+  <img src="images/npower.png" alt="Certification 3"
+    style="width: 120px; height: 120px; object-fit: contain; box-shadow: 0 0 8px rgba(0,0,0,0.2); background-color: #fff;" />
+</a>
 </div>
 				<!-- Header -->
 					<header id="header">
