--- a/index.html
+++ b/index.html
@@ -109,7 +109,17 @@ An interactive web application that leverages collaborative filtering and cosine
 										<li><a href="https://github.com/sudeshna1991621/Book-Recommendation.git" class="button">View Project</a></li>
 									</ul>
 								</article>
-							
+							<article>
+									<header>
+										<h2><a href="https://github.com/sudeshna1991621/Tableau-Car-Sales-Dashboard.git">Tableau Project: Car Sales Trends Analysis
+										</a></h2>
+									</header>
+									<a href="https://github.com/sudeshna1991621/Tableau-Car-Sales-Dashboard.git" class="image fit"><img src="images/Dashboard.png" alt="" /></a>
+									<p>A visually engaging Tableau dashboard providing year-over-year insights into car sales by region, body style, and company for strategic decision-making.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/sudeshna1991621/Tableau-Car-Sales-Dashboard.git" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/sudeshna1991621/Spam-classification.git">NLP-Powered Spam Filtering System with Model Deployment
