--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div id="intro">
 					<h1 style="margin-top: -1em;">SUDESHNA MONDAL</h1>
 <p style="font-size: 1.2em; font-weight: 400;">
-  Skilled in <strong>Python</strong>, <strong>SQL</strong>, <strong>Excel</strong>, <strong>Power BI</strong>, 
+  Skilled in <strong>Python</strong>, <strong>SQL</strong>, <strong>Excel</strong>, <strong>Power BI</strong>, <strong>Tableau</strong>, 
   <strong>Web Scraping</strong>, <strong>Data Analysis</strong>, <strong>Data Visualization</strong>, <strong>Machine Learning</strong>, 
   <strong>Statistical Analysis</strong>, <strong>Storytelling</strong>, <strong>Problem Solving</strong>, 
   <strong>Application Development</strong>, <strong>Databricks</strong>, and <strong>Microsoft Azure</strong></p>
