--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@ An interactive web application that leverages collaborative filtering and cosine
 										<li><a href="https://github.com/sudeshna1991621/Citibike-Trip-Analysis-with-Databricks-SQL.git" class="button">View Project</a></li>
 									</ul>
 								</article>
+									<article>
+									<header>
+										<h2><a href="https://github.com/sudeshna1991621/Data-Cleaning-and-EDA-through-SQL.git">Layoff Data Cleaning & Analysis with SQL</a></h2>
+									</header>
+									<a href="https://github.com/sudeshna1991621/Data-Cleaning-and-EDA-through-SQL.git" class="image fit"><img src="images/citibike1.jpg" alt="" /></a>
+									<p>Cleaned and analyzed layoff data using MySQL; applied CTEs, joins, and procedures to uncover trends by company, industry, and country.
+Performed SQL-based EDA and built a stored procedure to track rolling layoffs over time.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/sudeshna1991621/Data-Cleaning-and-EDA-through-SQL.git" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
